src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;

  background: url(../assets/background.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;

  color: white;

  /* @font-face {
    font-family: 'Slider';
    src: local('Slider'), url(../assets/SliderRegular.ttf) format('ttf');
  } */

  @font-face {
  font-family: 'Slider'; /* This is the name you'll use in CSS and Tailwind */
  src: url('../assets/SliderRegular.ttf') format('truetype'); /* Path to your font file and format */
  font-weight: normal; /* Adjust if your font has different weights */
  font-style: normal; /* Adjust if your font has different styles */
  font-display: swap; /* Best practice for performance and user experience */
}
}



a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

